@@ -1,6 +1,12 @@
 launchpad-buildd (127) UNRELEASED; urgency=low
 
+  [ William Grant ]
   * Refactor lpbuildd.binarypackage tests to be readable.
+
+  [ Colin Watson ]
+  * Apply more reasonable log handling, as well as logrotate.
+    RotatableFileLogObserver class borrowed from Launchpad, amended to use
+    SIGHUP as its reopening signal.
 
  -- William Grant <wgrant@ubuntu.com>  Sat, 18 Apr 2015 06:41:52 +1000
 
